# pyfunclog

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pyfunclog/: __init__.py  async_support.py  core.py  decorators.py  filters.py  utils.py
src/pyfunclog/: __init__.py  core.py  decorators.py  filters.py  utils.py
src/tests/: pyproject.toml  setup.py  test_core.py
tests/: conftest.py  test_async.py  test_core.py  test_fastapi.py
