[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfunclog"
version = "1.0.0"
description = "Comprehensive function logging with async support and sensitive data protection"
readme = "README.md"
authors = [
    {name = "sobhan zadehali", email = "sobhan.za47@gmail.com"}
]
license = {text = "MIT"}
keywords = ["logging", "debugging", "security", "async", "fastapi", "sensitive-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/sobhanzadehali/pyfunclog"
Documentation = "https://github.com/sobhanzadehali/pyfunclog#readme"
Repository = "https://github.com/sobhanzadehali/pyfunclog"
Issues = "https://github.com/sobhanzadehali/pyfunclog/issues"