[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfunclog"
version = "2.0.1"
description = "Comprehensive function logging with async support and sensitive data protection"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "sobhan zadehali", email = "sobhan.za47@gmail.com"}
]
license = {text = "MIT"}
keywords = ["logging", "debugging", "security", "async", "fastapi", "sensitive-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/sobhanzadehali/pyfunclog"
Documentation = "https://github.com/sobhanzadehali/pyfunclog#readme"
Repository = "https://github.com/sobhanzadehali/pyfunclog"
Issues = "https://github.com/sobhanzadehali/pyfunclog/issues"

[project.scripts]
pyfunclog-demo = "pyfunclog.examples.basic_usage:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfunclog*"]
exclude = ["tests*", "examples*", "dist*", "build*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"